Fix issue Text elements must have sufficient color contrast against the background

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,4 +1,4 @@
-$primary-gray: #8a8b99;
+$primary-gray: #4d4d4d;
 $primary-light-gray: #f5f6fa;
 $primary-light-gray-1: #eaeff5;
 
